--- a/_layouts/post.pug
+++ b/_layouts/post.pug
@@ -20,23 +20,20 @@ article.post
     .prose.mx-auto
       | {{ content }}
 
-      .post-footer.mt-12.pt-6.border-t.border-border
-        | {% if page.author %}
-        .author.text-sm
-          | Written by {{ page.author }}
-        | {% endif %}
-
+      .post-footer.mt-12.pt-6
         //- Social sharing component
         | {% include social-share.pug title=page.title url=page.url %}
+
+        hr(class="my-8 border-border")
 
         | {% if page.previous or page.next %}
         nav.post-nav
           | {% if page.previous %}
           a.prev(href="{{ page.previous.url }}")
-            span.label
-              i.fas.fa-arrow-left
+            div.label
+              i.fas.fa-arrow-left.mr-2
               | Previous Post
-            span.title {{ page.previous.title }}
+              div.title {{ page.previous.title }}
           | {% endif %}
           | {% if page.next %}
           a.next(href="{{ page.next.url }}")
