--- a/index.pug
+++ b/index.pug
@@ -24,9 +24,10 @@ main.container.mx-auto.px-4.py-4
     //- Posts Column
     div.fade-in-on-scroll
       h2.text-2xl.font-bold Latest Posts
-      a.text-sm(href="/blog", class="hover:text-primary")
+      a.text-xs(href="/blog", class="hover:text-primary")
         | View all posts
         i.fas.fa-arrow-right.ml-1
+      div.mt-2
       | {% for post in site.posts limit:3 %}
       | {% include card.pug
       |   type="post"
@@ -41,9 +42,10 @@ main.container.mx-auto.px-4.py-4
     //- Projects Column
     div.fade-in-on-scroll
       h2.text-2xl.font-bold Featured Projects
-      a.text-sm(href="/projects" class="hover:text-primary")
+      a.text-xs(href="/projects" class="hover:text-primary")
         | View all projects
         i.fas.fa-arrow-right.ml-1
+      div.mt-2
       | {% for project in site.projects limit:3 %}
       | {% include card.pug
       |   type="project"
