--- a/projects.pug
+++ b/projects.pug
@@ -6,7 +6,7 @@ permalink: /projects/
 hero: true
 ---
 
-.hero.bg-gradient-to-r.from-blue-600.to-indigo-700.text-white.py-16.mb-8
+.hero.text-white.py-16.mb-8
   .container.mx-auto.px-4.text-center
     h1.text-4xl.font-bold.mb-4 {{ page.title }}
     p.text-xl.opacity-90.max-w-2xl.mx-auto {{ page.description }}
