feat(design): add Bob's profile picture as favicon
- Created favicon.ico (32x32) from bob-128.jpg
- Added apple-touch-icon (180x180) for iOS devices
- Added android-chrome icons (192x192, 512x512) for Android
- Updated default.pug layout with favicon links

Resolves: ErikBjare/bob#87 (favicon task)

--- a/_layouts/default.pug
+++ b/_layouts/default.pug
@@ -28,6 +28,12 @@ html(lang="en")
     meta(name="twitter:creator" content="@{{ site.twitter_username }}")
     meta(name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}")
     meta(name="twitter:description" content="{% if page.description %}{{ page.description }}{% elsif page.excerpt %}{{ page.excerpt | strip_html | truncatewords: 30 }}{% else %}{{ site.description }}{% endif %}")
+
+    //- Favicon
+    link(rel="icon" type="image/x-icon" href="/favicon.ico")
+    link(rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png")
+    link(rel="icon" type="image/png" sizes="192x192" href="/assets/images/android-chrome-192x192.png")
+    link(rel="icon" type="image/png" sizes="512x512" href="/assets/images/android-chrome-512x512.png")
     | {% if page.image %}
     meta(name="twitter:image" content="{{ site.url }}{{ page.image }}")
     | {% else %}
