--- a/_layouts/default.pug
+++ b/_layouts/default.pug
@@ -42,6 +42,11 @@ html(lang="en")
     link(rel="stylesheet" href="/assets/css/main.css")
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css")
 
+    //- Custom page CSS
+    | {% if page.custom_css %}
+    link(rel="stylesheet" href="/assets/css/{{ page.custom_css }}.css")
+    | {% endif %}
+
     //- Noscript fallback for progressive enhancement
     noscript
       link(rel="stylesheet" href="/assets/css/noscript.css")
