feat(blog): add cover image support to post hero
Posts can now specify an 'image' frontmatter field to display:
- A full-width cover image in the hero section
- og:image and twitter:image meta tags for social sharing

Image path should be relative to site root, e.g. /assets/images/my-post.png

--- a/_includes/hero.pug
+++ b/_includes/hero.pug
@@ -18,6 +18,10 @@
     |   tags=include.tags
     |   reading_time=include.reading_time
     | %}
+    | {% if include.image %}
+    .hero-image.mt-6
+      img(src="{{ include.image }}" alt="{{ include.title }}" class="w-full rounded-lg shadow-lg object-cover max-h-96")
+    | {% endif %}
     | {% if include.github %}
     p.github-link
       a(href="https://github.com/{{ include.github }}" target="_blank" rel="noopener")
