--- a/_layouts/post.pug
+++ b/_layouts/post.pug
@@ -14,6 +14,7 @@ article.post
   |   author=page.author
   |   tags=page.tags
   |   reading_time=reading_time
+  |   image=page.image
   | %}
 
   main.container.mx-auto.px-4.py-8
