--- a/_layouts/post.pug
+++ b/_layouts/post.pug
@@ -19,7 +19,12 @@ article.post
 
   main.container.mx-auto.px-4.py-8
     .prose.mx-auto
+      | {% assign content_parts = content | split: '</h1>' %}
+      | {% if content_parts.size > 1 %}
+      | {{ content_parts | slice: 1, 9999 | join: '</h1>' }}
+      | {% else %}
       | {{ content }}
+      | {% endif %}
 
       .post-footer.mt-12.pt-6
         //- Social sharing component
